--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     </head>
 <body>
-    <h1>Exotic Photo Galary</h1>
+    <h1>Exotic Photo Gallery</h1>
     
         <img src="car1.webp" alt="Photo 1"> 
         <img src="car2.webp" alt="Photo 2">
